update code API Exercise Service
