# ExerciseService/api/swagger/swagger.yaml
@@ -24,16 +24,20 @@ consumes:
 produces:
   - application/json
 paths:
-  /topic/{topicId}:
+  /topic/{topicId}/numberquestion:
     x-swagger-router-controller: question
     get:
       description: Returns list questions of topic
-      # used as the method name of the controller
-      operationId: getQuestionsOfTopic
+      operationId: getListQuestionsOfTopic
       parameters:
         - name: topicId
           in: path
           description: id of topic
+          required: true
+          type: string
+        - name: numberquestion
+          in: query
+          description: number question wanted get
           required: true
           type: string
       # security:
@@ -49,20 +53,17 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /choicequestion:
+    x-swagger-router-controller: question
     post:
-      description: insert question of Topic
-      operationId: insertQuestionIntoTopic
+      description: insert choice question of Topic
+      operationId: insertChoiceQuestionIntoTopic
       parameters:
-        - name: topicId
-          in: path
-          description: id of topic
-          required: true
-          type: string
         - name: body
           in: body
           description: fields of question
           schema:
-            $ref: "#/definitions/QuestionRequest"           
+            $ref: "#/definitions/ChoiceQuestionRequest"           
       # security:
       # - auth0: []
       responses:
@@ -76,15 +77,16 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    delete:
-      description: "delete question of topic"
-      operationId: deleteQuestionOfTopic
+
+    put:
+      description: "update choice question of topic"
+      operationId: updateChoiceQuestionOfTopic
       parameters:
-        - name: topicId
-          in: path
-          description: id of topic
-          required: true
-          type: string
+        - name: body
+          in: body
+          description: fields of question
+          schema:
+            $ref: "#/definitions/ChoiceQuestionUpdateRequest"  
       # security:
       # - auth0: []
       responses:
@@ -98,20 +100,41 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  
+  /fillquestion:
+    x-swagger-router-controller: question
+    post:
+      description: insert fill question of Topic
+      operationId: insertFillQuestionIntoTopic
+      parameters:
+        - name: body
+          in: body
+          description: fields of question
+          schema:
+            $ref: "#/definitions/FillQuestionRequest"           
+      # security:
+      # - auth0: []
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/MessageResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
     put:
       description: "update question of topic"
-      operationId: updateQuestionOfTopic
+      operationId: updateFillQuestionOfTopic
       parameters:
-        - name: topicId
-          in: path
-          description: id of topic
-          required: true
-          type: string
         - name: body
           in: body
           description: fields of question
           schema:
-            $ref: "#/definitions/QuestionRequest"  
+            $ref: "#/definitions/FillQuestionUpdateRequest"  
       # security:
       # - auth0: []
       responses:
@@ -125,11 +148,12 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /verifyAnswer/{questionId}:
+            
+  /answer/{questionId}:
     x-swagger-router-controller: question
     post:
       description: verify answer
-      operationId: verfifyAnswer
+      operationId: verifyAnswer
       parameters:
         - name: questionId
           in: path
@@ -154,6 +178,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -161,11 +186,16 @@ definitions:
   ListQuestionOfTopic:
     type: object
     properties:
-      listQuestion:
+      listChoiceQuestion:
         type: array
         items:
-          $ref: "#/definitions/QuestionResponse"
-  QuestionResponse:
+          $ref: "#/definitions/ChoiceQuestionResponse"
+      listFillQuestion:
+        type: array
+        items:
+          $ref: "#/definitions/FillQuestionResponse"
+          
+  ChoiceQuestionResponse:
     type: object
     properties:
       id:
@@ -183,9 +213,45 @@ definitions:
             type: string
           ansD:
             type: string
-  QuestionRequest:
+            
+  FillQuestionResponse:
     type: object
     properties:
+      id:
+        type: string
+      content:
+        type: string
+  
+  ChoiceQuestionRequest:
+    type: object
+    properties:
+      topicId:
+        type: string
+      content:
+        type: string
+      answers:
+        type: object
+        properties:
+          ansA:
+            type: string
+          ansB:
+            type: string
+          ansC:
+            type: string
+          ansD:
+            type: string
+      answerRight:
+        type: string
+      explainRight:
+        type: string
+      suggest:
+        type: string
+  
+  ChoiceQuestionUpdateRequest:
+    type: object
+    properties:
+      topicId:
+        type: string
       id:
         type: string
       content:
@@ -207,27 +273,63 @@ definitions:
         type: string
       suggest:
         type: string
+  
+  FillQuestionRequest:
+    type: object
+    properties:
+      topicId:
+        type: string
+      content:
+        type: string
+      answerRight:
+        type: string
+      explainRight:
+        type: string
+      suggest:
+        type: string
+        
+  FillQuestionUpdateRequest:
+    type: object
+    properties:
+      topicId:
+        type: string
+      id:
+        type: string
+      content:
+        type: string
+      answerRight:
+        type: string
+      explainRight:
+        type: string
+      suggest:
+        type: string
+        
   MessageResponse:
     type: object
     required:
-      - success
+      - message
     properties:
-      success:
-        type: integer
       message:
         type: string
+        
   AnswerRequest:
     type: object
+    required:
+      - answer
     properties:
+      typeQuestion:
+        type: string
       answer:
         type: string
+        
   AnswerResponse:
     type: object
+    required:
+      - result
     properties:
       result:
         type: boolean
-      record:
-        type: string
+        
   ErrorResponse:
     required:
       - message
